force-app/main/default/objects/Integration_Log__c/fields/Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>