force-app/main/default/objects/Integration_Log__c/fields/Environment_Id__c.field-meta.xml
<CustomField>
    <fullName>Environment_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Environment Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>