force-app/main/default/objects/Integration_Log__c/fields/Environment_Name__c.field-meta.xml
<CustomField>
    <fullName>Environment_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Environment Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>