force-app/main/default/objects/Integration_Log__c/fields/Instance_Id__c.field-meta.xml
<CustomField>
    <fullName>Instance_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Instance Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>