force-app/main/default/objects/Integration_Log__c/fields/Log_Status__c.field-meta.xml
<CustomField>
    <fullName>Log_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Log Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>