force-app/main/default/objects/Integration_Log__c/fields/Logger_Name__c.field-meta.xml
<CustomField>
    <fullName>Logger_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Logger Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>