force-app/main/default/objects/Integration_Log__c/fields/Mulesoft_Log_Id__c.field-meta.xml
<CustomField>
    <fullName>Mulesoft_Log_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Mulesoft Log Id</label>
    <length>254</length>
    <type>Text</type>
</CustomField>