force-app/main/default/objects/Integration_Log__c/fields/Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Organization_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Organization Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>