force-app/main/default/objects/Integration_Log__c/fields/Thread_Name__c.field-meta.xml
<CustomField>
    <fullName>Thread_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Thread Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>