force-app/main/default/objects/Integration_Log__c/fields/Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Time_Stamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Time Stamp</label>
    <type>DateTime</type>
</CustomField>